fix cut off h1

--- a/css/styles.css
+++ b/css/styles.css
@@ -1052,7 +1052,7 @@ h2.page-title {
 
 @media screen and (min-width: 960px) {
   #content-main h1 {
-    margin-top: -0.5rem;
+    margin-top: -0.4375rem;
   }
 }
 
